Remove OpenGL (#882)
* first attempt at removing opengl

* changed OpenGLPanel to RenderPanel

* Added mipmaps for better zooming